<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EnterCodeManually">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="11dp"
        android:text="@string/textView" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="188dp"
        android:ems="10"
        android:hint="@string/editTextHint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/buttonOk" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="235dp"
        android:text="@string/textView6"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="69dp"
        android:ems="10"
        android:hint="@string/descrHere"
        android:inputType="textPersonName" />


</RelativeLayout>