<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddAcount">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="11dp"
        android:text="@string/textView" />

    <Button
        android:id="@+id/buttonQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-4dp"
        android:layout_marginBottom="273dp"
        android:text="@string/buttonQR" />

    <Button
        android:id="@+id/buttonEcm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-3dp"
        android:layout_marginBottom="178dp"
        android:text="@string/buttonEnterManually" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:hint="@string/descrHere"
        android:inputType="textPersonName" />

</RelativeLayout>