<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="11dp"
        android:text="@string/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:text="@string/textViewDot" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="77dp"
        android:text="@string/textViewDot" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="110dp"
        android:text="@string/textViewDot" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="142dp"
        android:text="@string/textViewDot" />

    <Button
        android:id="@+id/buttonQR"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-4dp"
        android:layout_marginBottom="273dp"
        android:text="@string/buttonQR" />

    <Button
        android:id="@+id/buttonEcm"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-3dp"
        android:layout_marginBottom="184dp"
        android:text="@string/buttonEnterManually" />

</RelativeLayout>